--- a/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj
+++ b/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj
@@ -111,6 +111,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AlphaPlayer.h" />
+    <ClInclude Include="Bet.h" />
+    <ClInclude Include="BetHistory.h" />
+    <ClInclude Include="Card.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Hand.h" />
+    <ClInclude Include="HumanPlayer.h" />
+    <ClInclude Include="Player.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AlphaPlayer.cpp" />
+    <ClCompile Include="Bet.cpp" />
+    <ClCompile Include="BetHistory.cpp" />
+    <ClCompile Include="Card.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Hand.cpp" />
+    <ClCompile Include="HumanPlayer.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
