--- a/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj
+++ b/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Hand.cpp" />
     <ClCompile Include="HumanPlayer.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
