--- a/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj.filters
+++ b/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="AlphaPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
