--- a/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj.filters
+++ b/PokerMonteCarlo/PokerMonteCarlo/PokerMonteCarlo.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="AlphaPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp">
